Add a Bureau/office group type and a city service content type.

--- a/web/sites/default/config/search_api.index.content.yml
+++ b/web/sites/default/config/search_api.index.content.yml
@@ -26,6 +26,7 @@ field_settings:
         'entity:node':
           page: default
           landing_page: full
+          city_service: default
   label:
     label: Label
     property_path: aggregated_field
@@ -65,9 +66,8 @@ datasource_settings:
       selected: {  }
 processor_settings:
   rendered_item: {  }
-  content_access:
-    weights:
-      preprocess_query: -10
+  add_url: {  }
+  aggregated_field: {  }
   tokenizer:
     fields:
       - rendered
@@ -79,24 +79,6 @@ processor_settings:
       preprocess_index: -6
       preprocess_query: -5
     all_fields: false
-  add_url: {  }
-  html_filter:
-    fields:
-      - rendered
-      - label
-    title: true
-    alt: true
-    tags:
-      h1: 5
-      h2: 3
-      h3: 2
-      strong: 2
-      b: 2
-    weights:
-      preprocess_index: -10
-      preprocess_query: -9
-    all_fields: false
-  aggregated_field: {  }
   stopwords:
     fields:
       - rendered
@@ -141,6 +123,14 @@ processor_settings:
       preprocess_index: -5
       preprocess_query: -4
     all_fields: false
+  ignorecase:
+    fields:
+      - rendered
+      - label
+    weights:
+      preprocess_index: -9
+      preprocess_query: -8
+    all_fields: false
   transliteration:
     fields:
       - rendered
@@ -149,13 +139,24 @@ processor_settings:
       preprocess_index: -4
       preprocess_query: -3
     all_fields: false
-  ignorecase:
+  content_access:
+    weights:
+      preprocess_query: -10
+  html_filter:
     fields:
       - rendered
       - label
+    title: true
+    alt: true
+    tags:
+      h1: 5
+      h2: 3
+      h3: 2
+      strong: 2
+      b: 2
     weights:
-      preprocess_index: -9
-      preprocess_query: -8
+      preprocess_index: -10
+      preprocess_query: -9
     all_fields: false
 tracker_settings:
   default:
