--- a/web/sites/default/config/views.view.search.yml
+++ b/web/sites/default/config/views.view.search.yml
@@ -79,6 +79,7 @@ display:
             'entity:node':
               page: teaser
               landing_page: teaser
+              city_service: default
       fields:
         rendered:
           table: search_api_index_content
