--- a/web/sites/default/config/user.role.layout_manager.yml
+++ b/web/sites/default/config/user.role.layout_manager.yml
@@ -16,5 +16,6 @@ is_admin: false
 permissions:
   - 'administer node display'
   - 'administer panelizer'
+  - 'administer panelizer node city_service defaults'
   - 'administer panelizer node landing_page defaults'
   - 'administer panelizer node page defaults'
