Remove the Lightning basic page and landing page content types.

--- a/web/sites/default/config/workflows.workflow.editorial.yml
+++ b/web/sites/default/config/workflows.workflow.editorial.yml
@@ -2,9 +2,6 @@ uuid: d3227574-01cb-4000-bfee-8530becbe516
 langcode: en
 status: true
 dependencies:
-  config:
-    - node.type.landing_page
-    - node.type.page
   module:
     - content_moderation
 _core:
@@ -76,7 +73,4 @@ type_settings:
         - review
       to: review
       weight: 0
-  entity_types:
-    node:
-      - page
-      - landing_page
+  entity_types: {  }
