Fixing lando and removing the context module.

--- a/.lando.yml
+++ b/.lando.yml
@@ -15,9 +15,9 @@ services:
       - composer create-project -n -d $HOME/.terminus/plugins pantheon-systems/terminus-drupal-console-plugin:~1
       - composer create-project -n -d ~/.terminus/plugins pantheon-systems/terminus-build-tools-plugin:~1
 drush: composer
-# tooling:
-#  drush:
-#    service: appserver
-#    cmd:
-#      - "drush"
-#      - "--root=/app/web"
+tooling:
+  drush:
+    service: appserver
+    cmd:
+      - "drush"
+      - "--root=/app/web" 
