Add taxonomy fields to city service.

--- a/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
@@ -3,22 +3,42 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.city_service.body
+    - field.field.node.city_service.field_community_actions
+    - field.field.node.city_service.field_sections
+    - field.field.node.city_service.field_topics
     - node.type.city_service
   module:
-    - text
+    - entity_reference_revisions
     - user
 id: node.city_service.default
 targetEntityType: node
 bundle: city_service
 mode: default
 content:
-  body:
-    label: hidden
-    type: text_default
-    weight: 101
-    settings: {  }
+  field_community_actions:
+    weight: 103
+    label: above
+    settings:
+      link: true
     third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_sections:
+    type: entity_reference_revisions_entity_view
+    weight: 101
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    region: content
+  field_topics:
+    weight: 102
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   links:
     weight: 100
