--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -98,6 +98,7 @@ module:
   viewsreference: 0
   workflows: 0
   menu_link_content: 1
+  pathauto: 1
   views: 10
   paragraphs: 11
   lightning: 1000
