Updating the default city service display.

--- a/web/sites/default/config/core.entity_view_display.node.city_service.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.teaser.yml
@@ -16,4 +16,7 @@ content:
     weight: 100
     region: content
 hidden:
+  field_community_actions: true
+  field_sections: true
+  field_topics: true
   scheduled_publication: true
