Add some group node listings to the group homepage.

--- a/web/sites/default/config/views.view.group_nodes.yml
+++ b/web/sites/default/config/views.view.group_nodes.yml
@@ -878,16 +878,15 @@ display:
           relationship: group_content
           group_type: group
           admin_label: ''
-          default_action: 'access denied'
+          default_action: default
           exception:
             value: all
             title_enable: false
             title: All
           title_enable: true
           title: '{{ arguments.gid|placeholder }} nodes'
-          default_argument_type: fixed
-          default_argument_options:
-            argument: ''
+          default_argument_type: group_id_from_url
+          default_argument_options: {  }
           default_argument_skip_url: false
           summary_options:
             base_path: ''
@@ -916,6 +915,25 @@ display:
         - group_membership.roles.permissions
         - 'languages:language_content'
         - 'languages:language_interface'
+        - route
+        - url
+        - url.query_args
+        - 'user.node_grants:view'
+      tags: {  }
+  block_1:
+    display_plugin: block
+    id: block_1
+    display_title: Block
+    position: 2
+    display_options:
+      display_extenders: {  }
+    cache_metadata:
+      max-age: 0
+      contexts:
+        - group_membership.roles.permissions
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - route
         - url
         - url.query_args
         - 'user.node_grants:view'
@@ -944,6 +962,7 @@ display:
         - group_membership.roles.permissions
         - 'languages:language_content'
         - 'languages:language_interface'
+        - route
         - url
         - url.query_args
         - 'user.node_grants:view'
