Changes to the Group homepage.

--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -15,7 +15,7 @@ content:
   field_group_sections:
     type: entity_reference_revisions_entity_view
     weight: -4
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
