--- a/web/sites/default/config/views.view.group_nodes.yml
+++ b/web/sites/default/config/views.view.group_nodes.yml
@@ -867,7 +867,8 @@ display:
           group_type: group
           admin_label: 'Content relation'
           required: true
-          group_content_plugins: {  }
+          group_content_plugins:
+            'group_node:city_service': '0'
           entity_type: node
           plugin_id: group_content_to_entity_reverse
       arguments:
@@ -909,24 +910,6 @@ display:
           plugin_id: numeric
       display_extenders: {  }
       title: Nodes
-    cache_metadata:
-      max-age: 0
-      contexts:
-        - group_membership.roles.permissions
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - route
-        - url
-        - url.query_args
-        - 'user.node_grants:view'
-      tags: {  }
-  block_1:
-    display_plugin: block
-    id: block_1
-    display_title: Block
-    position: 2
-    display_options:
-      display_extenders: {  }
     cache_metadata:
       max-age: 0
       contexts:
