Adjust permissions on bureau/office content type to allow anonymous users to see content.

--- a/web/sites/default/config/group.role.bureau_office-anonymous.yml
+++ b/web/sites/default/config/group.role.bureau_office-anonymous.yml
@@ -11,4 +11,5 @@ internal: true
 audience: anonymous
 group_type: bureau_office
 permissions_ui: true
-permissions: {  }
+permissions:
+  - 'view group_node:city_service entity'
