--- a/web/sites/default/config/group.role.bureau_office-member.yml
+++ b/web/sites/default/config/group.role.bureau_office-member.yml
@@ -11,4 +11,14 @@ internal: true
 audience: member
 group_type: bureau_office
 permissions_ui: true
-permissions: {  }
+permissions:
+  - 'edit group'
+  - 'view group'
+  - 'leave group'
+  - 'access group_node overview'
+  - 'create group_node:city_service entity'
+  - 'delete own group_node:city_service entity'
+  - 'update any group_node:city_service entity'
+  - 'update own group_node:city_service entity'
+  - 'view group_node:city_service entity'
+  - 'view unpublished group_node:city_service entity'
