--- a/web/sites/default/config/group.role.bureau_office-admin.yml
+++ b/web/sites/default/config/group.role.bureau_office-admin.yml
@@ -12,22 +12,22 @@ audience: member
 group_type: bureau_office
 permissions_ui: true
 permissions:
-  0: 'access content overview'
-  1: 'administer group'
-  2: 'delete group'
-  3: 'edit group'
-  4: 'view group'
-  5: 'administer members'
-  6: 'update own group_membership content'
-  7: 'leave group'
-  8: 'view group_membership content'
-  9: 'access group_node overview'
-  20: 'create group_node:city_service entity'
-  21: 'delete any group_node:city_service entity'
-  22: 'delete own group_node:city_service entity'
-  23: 'update any group_node:city_service entity'
-  24: 'update own group_node:city_service entity'
-  25: 'view group_node:city_service entity'
-  26: 'view unpublished group_node:city_service entity'
-  27: 'create group_node:city_service content'
-  28: 'view group_node:city_service content'
+  - 'access content overview'
+  - 'administer group'
+  - 'delete group'
+  - 'edit group'
+  - 'view group'
+  - 'administer members'
+  - 'update own group_membership content'
+  - 'leave group'
+  - 'view group_membership content'
+  - 'access group_node overview'
+  - 'create group_node:city_service entity'
+  - 'delete any group_node:city_service entity'
+  - 'delete own group_node:city_service entity'
+  - 'update any group_node:city_service entity'
+  - 'update own group_node:city_service entity'
+  - 'view group_node:city_service entity'
+  - 'view unpublished group_node:city_service entity'
+  - 'create group_node:city_service content'
+  - 'view group_node:city_service content'
