--- a/web/sites/default/config/group.role.bureau_office-outsider.yml
+++ b/web/sites/default/config/group.role.bureau_office-outsider.yml
@@ -11,4 +11,6 @@ internal: true
 audience: outsider
 group_type: bureau_office
 permissions_ui: true
-permissions: {  }
+permissions:
+  - 'view group'
+  - 'view group_node:city_service entity'
