--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,6 @@ Thumbs.db
 # Things in the core directory that Drupal 8 commits in the repository.
 !web/core/**/*.gz
 
+# Visual Studio Code #
+##########
+.vscode/*
