Adding node service to .lando.yml for running build processes.

--- a/.lando.yml
+++ b/.lando.yml
@@ -4,7 +4,6 @@ config:
   framework: drupal8
   site: portlandor
   id: 5c6715db-abac-4633-ada8-1c9efe354629
-#  webroot: web
 framework: drupal8
 xdebug: true
 services:
@@ -14,6 +13,13 @@ services:
       - composer create-project -n -d ~/.terminus/plugins pantheon-systems/terminus-composer-plugin:~1
       - composer create-project -n -d $HOME/.terminus/plugins pantheon-systems/terminus-drupal-console-plugin:~1
       - composer create-project -n -d ~/.terminus/plugins pantheon-systems/terminus-build-tools-plugin:~1
+    node:
+      type: node:8
+      build:
+        - "cd $LANDO_MOUNT && npm install"
+        - "cd $LANDO_MOUNT && gulp"
+      globals:
+        gulp-cli: "latest"
 drush: composer
 tooling:
   drush:
@@ -21,3 +27,9 @@ tooling:
     cmd:
       - "drush"
       - "--root=/app/web" 
+  npm:
+    service: node
+  node:
+    service: node
+  gulp:
+    service: node
