--- a/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
@@ -10,6 +10,12 @@ dependencies:
   module:
     - entity_reference_revisions
     - user
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
 id: node.city_service.default
 targetEntityType: node
 bundle: city_service
