--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -4,10 +4,9 @@ module:
   adminimal_admin_toolbar: 0
   block: 0
   block_content: 0
-  bootstrap_layouts: 0
-  bootstrap_paragraphs: 0
   breakpoint: 0
   ckeditor: 0
+  components: 0
   config: 0
   consumers: 0
   contact: 0
@@ -92,7 +91,6 @@ module:
   user: 0
   video_embed_field: 0
   video_embed_media: 0
-  views_bootstrap: 0
   views_infinite_scroll: 0
   views_ui: 0
   viewsreference: 0
@@ -108,6 +106,7 @@ theme:
   seven: 0
   bootstrap: 0
   adminimal_theme: 0
+  particle: 0
 profile: lightning
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
