--- a/web/sites/default/config/field.field.node.city_service.field_sections.yml
+++ b/web/sites/default/config/field.field.node.city_service.field_sections.yml
@@ -5,17 +5,6 @@ dependencies:
   config:
     - field.storage.node.field_sections
     - node.type.city_service
-    - paragraphs.paragraphs_type.bp_blank
-    - paragraphs.paragraphs_type.bp_block
-    - paragraphs.paragraphs_type.bp_carousel
-    - paragraphs.paragraphs_type.bp_column_wrapper
-    - paragraphs.paragraphs_type.bp_columns
-    - paragraphs.paragraphs_type.bp_columns_three_uneven
-    - paragraphs.paragraphs_type.bp_columns_two_uneven
-    - paragraphs.paragraphs_type.bp_image
-    - paragraphs.paragraphs_type.bp_modal
-    - paragraphs.paragraphs_type.bp_simple
-    - paragraphs.paragraphs_type.bp_tabs
   module:
     - entity_reference_revisions
 id: node.city_service.field_sections
@@ -32,18 +21,7 @@ settings:
   handler: 'default:paragraph'
   handler_settings:
     negate: 0
-    target_bundles:
-      bp_blank: bp_blank
-      bp_block: bp_block
-      bp_carousel: bp_carousel
-      bp_column_wrapper: bp_column_wrapper
-      bp_columns: bp_columns
-      bp_columns_three_uneven: bp_columns_three_uneven
-      bp_columns_two_uneven: bp_columns_two_uneven
-      bp_image: bp_image
-      bp_modal: bp_modal
-      bp_simple: bp_simple
-      bp_tabs: bp_tabs
+    target_bundles: null
     target_bundles_drag_drop:
       bp_accordion:
         weight: 16
@@ -52,41 +30,41 @@ settings:
         weight: 17
         enabled: false
       bp_blank:
-        enabled: true
         weight: 18
+        enabled: false
       bp_block:
-        enabled: true
         weight: 19
+        enabled: false
       bp_carousel:
-        enabled: true
         weight: 20
+        enabled: false
       bp_column_wrapper:
-        enabled: true
         weight: 21
+        enabled: false
       bp_columns:
-        enabled: true
         weight: 22
+        enabled: false
       bp_columns_three_uneven:
-        enabled: true
         weight: 23
+        enabled: false
       bp_columns_two_uneven:
-        enabled: true
         weight: 24
+        enabled: false
       bp_image:
-        enabled: true
         weight: 25
+        enabled: false
       bp_modal:
-        enabled: true
         weight: 26
+        enabled: false
       bp_simple:
-        enabled: true
         weight: 27
+        enabled: false
       bp_tab_section:
         weight: 28
         enabled: false
       bp_tabs:
-        enabled: true
         weight: 29
+        enabled: false
       bp_view:
         weight: 30
         enabled: false
