--- a/web/themes/custom/particle/package.json
+++ b/web/themes/custom/particle/package.json
@@ -19,9 +19,9 @@
   "scripts": {
     "start": "npm-run-all --continue-on-error --parallel gulp dev:pl",
     "dev:pl": "webpack-dev-server --config ./apps/pl/webpack.pl.dev.js --hot --progress",
-    "compile:pl": "webpack --config ./apps/pl/webpack.pl.prod.js && gulp compile",
-    "compile:drupal": "webpack --config ./apps/drupal/webpack.drupal.prod.js",
-    "compile:grav": "webpack --config ./apps/grav/webpack.grav.prod.js",
+    "build:pl": "webpack --config ./apps/pl/webpack.pl.prod.js && gulp compile",
+    "build:drupal": "webpack --config ./apps/drupal/webpack.drupal.prod.js",
+    "build:grav": "webpack --config ./apps/grav/webpack.grav.prod.js",
     "lint:js": "eslint ./",
     "lint:scss": "stylelint '{source, apps/drupal, apps/pl}/**/*.scss'",
     "lint": "npm run lint:js; npm run lint:scss",
