--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,41 @@ Thumbs.db
 # Visual Studio Code #
 ##########
 .vscode/*
+
+# Particle theme gitignore #
+##########
+
+# Compiled files
+web/themes/custom/particle/dist/
+web/themes/custom/particle/source/_patterns/01-atoms/icon/font/
+web/themes/custom/particle/source/_patterns/01-atoms/icon/scss/_icon-map-generated.scss
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._.DS_Store
+._.DS_Store?
+
+# Dependencies
+web/themes/custom/particle/node_modules
+web/themes/custom/particle/vendor
+
+# Generated files
+*.sass-cache/
+.eslintcache
+*unison.*
+
+#IDE plugins
+.idea
+atlassian-ide-plugin.xml
+
+web/themes/custom/particle/source/styleguide/css
+
+# Errors
+npm-debug.log
+php_errors.log
+
+# Local Lando node stuff #
+##########
+node_modules/
+package-lock.json
