--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -106,6 +106,7 @@ theme:
   seven: 0
   adminimal_theme: 0
   particle: 0
+  bootstrap: 0
 profile: lightning
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
