POWR-44 Adding a simple paragraph type to City Services

--- a/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
@@ -4,9 +4,11 @@ status: true
 dependencies:
   config:
     - field.field.node.city_service.field_community_actions
+    - field.field.node.city_service.field_paragraphs
     - field.field.node.city_service.field_topics
     - node.type.city_service
   module:
+    - entity_reference_revisions
     - panelizer
     - user
 third_party_settings:
@@ -27,6 +29,15 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_paragraphs:
+    type: entity_reference_revisions_entity_view
+    weight: 104
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
     region: content
   field_topics:
     weight: 102
