--- a/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
@@ -4,11 +4,13 @@ status: true
 dependencies:
   config:
     - field.field.node.city_service.field_community_actions
+    - field.field.node.city_service.field_paragraphs
     - field.field.node.city_service.field_topics
     - node.type.city_service
   module:
     - content_moderation
     - datetime
+    - paragraphs
     - path
 id: node.city_service.default
 targetEntityType: node
@@ -22,13 +24,25 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_community_actions:
-    weight: 2
+    weight: 1
     settings: {  }
     third_party_settings: {  }
     type: options_buttons
     region: content
-  field_topics:
+  field_paragraphs:
+    type: entity_reference_paragraphs
     weight: 3
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
+    region: content
+  field_topics:
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     type: options_buttons
