Clean up config to look at Bootstrap theme in preparation for sprint 0

--- a/web/sites/default/config/bootstrap.settings.yml
+++ b/web/sites/default/config/bootstrap.settings.yml
@@ -5,8 +5,8 @@ _core:
 favicon:
   mimetype: image/vnd.microsoft.icon
   path: profiles/contrib/lightning/favicon.ico
-  url: ''
-  use_default: false
+  url: 'http://portlandor.lndo.site/profiles/contrib/lightning/favicon.ico'
+  use_default: true
 features:
   comment_user_picture: true
   comment_user_verification: true
@@ -15,4 +15,6 @@ features:
 logo:
   path: profiles/contrib/lightning/lightning.png
   url: ''
-  use_default: false
+  use_default: true
+table_responsive: '-1'
+table: ''
