--- a/web/sites/default/config/views.view.group_nodes.yml
+++ b/web/sites/default/config/views.view.group_nodes.yml
@@ -487,6 +487,8 @@ display:
           text: 'View relation'
           entity_type: group_content
           plugin_id: entity_link
+          output_url_as_text: false
+          absolute: false
         edit_group_content:
           id: edit_group_content
           table: group_content
@@ -911,7 +913,7 @@ display:
       display_extenders: {  }
       title: Nodes
     cache_metadata:
-      max-age: 0
+      max-age: -1
       contexts:
         - group_membership.roles.permissions
         - 'languages:language_content'
@@ -940,7 +942,7 @@ display:
         menu_name: main
         enabled: true
     cache_metadata:
-      max-age: 0
+      max-age: -1
       contexts:
         - group_membership.roles.permissions
         - 'languages:language_content'
