--- a/web/sites/default/config/views.view.media.yml
+++ b/web/sites/default/config/views.view.media.yml
@@ -11,7 +11,6 @@ dependencies:
     - file
     - image
     - media
-    - system
     - user
     - views_infinite_scroll
 _core:
@@ -650,6 +649,7 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
+            placeholder: ''
           is_grouped: false
           group_info:
             label: ''
@@ -1063,6 +1063,7 @@ display:
               landing_page_reviewer: '0'
               media_creator: '0'
               media_manager: '0'
+            placeholder: ''
           is_grouped: false
           group_info:
             label: ''
@@ -1486,6 +1487,7 @@ display:
               landing_page_reviewer: '0'
               media_creator: '0'
               media_manager: '0'
+            placeholder: ''
           is_grouped: false
           group_info:
             label: ''
