--- a/web/sites/default/config/user.role.layout_manager.yml
+++ b/web/sites/default/config/user.role.layout_manager.yml
@@ -1,12 +1,7 @@
 uuid: 525be6cd-a82f-4a65-9337-c35dfa0288b8
 langcode: en
 status: true
-dependencies:
-  module:
-    - lightning
-third_party_settings:
-  lightning:
-    bundled: true
+dependencies: {  }
 _core:
   default_config_hash: FINNLf2pkhqumdQngtjMqoiVaOgXv2cHfnLPCCbB4n0
 id: layout_manager
