Removed alignment tools and moved blockquote tool.  Changed options to disallow HTML.

--- a/web/sites/default/config/editor.editor.simple_editor.yml
+++ b/web/sites/default/config/editor.editor.simple_editor.yml
@@ -17,16 +17,9 @@ settings:
           items:
             - Bold
             - Italic
+            - Blockquote
             - '-'
             - Format
-        -
-          name: Paragraph
-          items:
-            - JustifyLeft
-            - JustifyBlock
-            - JustifyRight
-            - Outdent
-            - Indent
         -
           name: Lists
           items:
@@ -35,7 +28,8 @@ settings:
         -
           name: Media
           items:
-            - Blockquote
+            - DrupalLink
+            - DrupalUnlink
         -
           name: Tools
           items:
