--- a/web/sites/default/config/filter.format.simple_editor.yml
+++ b/web/sites/default/config/filter.format.simple_editor.yml
@@ -6,9 +6,12 @@ name: 'Simplified Editor'
 format: simple_editor
 weight: 0
 filters:
-  filter_html_escape:
-    id: filter_html_escape
+  filter_html:
+    id: filter_html
     provider: filter
     status: true
     weight: -10
-    settings: {  }
+    settings:
+      allowed_html: '<a href hreflang> <em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <p> <hr>'
+      filter_html_help: true
+      filter_html_nofollow: false
