powr-74 enabling portlandor theme

--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -107,6 +107,7 @@ theme:
   adminimal_theme: 0
   particle: 0
   bootstrap: 0
+  portlandor: 0
 profile: lightning
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
