--- a/web/themes/custom/portlandor/portlandor.info.yml
+++ b/web/themes/custom/portlandor/portlandor.info.yml
@@ -3,7 +3,7 @@ type: theme
 base theme: bootstrap
 
 name: 'Portlandor'
-description: 'Uses the Bootstrap framework Sass source files and must be compiled (not for beginners).'
+description: 'Theme for portlandor.'
 package: 'Bootstrap'
 
 regions:
