POWR-45 updated paragraph and link text to be required

--- a/web/sites/default/config/field.field.paragraph.form_app_button.field_form_button.yml
+++ b/web/sites/default/config/field.field.paragraph.form_app_button.field_form_button.yml
@@ -13,11 +13,11 @@ entity_type: paragraph
 bundle: form_app_button
 label: 'Form link'
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
   link_type: 17
-  title: 1
+  title: 2
 field_type: link
