POWR-61 Add email_text field to Email Button Paragraph Type

--- a/web/sites/default/config/core.entity_form_display.paragraph.email_button.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.email_button.default.yml
@@ -3,20 +3,29 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.email_button.field_email_button
+    - field.field.paragraph.email_button.field_email_link
+    - field.field.paragraph.email_button.field_email_text
     - paragraphs.paragraphs_type.email_button
 id: paragraph.email_button.default
 targetEntityType: paragraph
 bundle: email_button
 mode: default
 content:
-  field_email_button:
-    weight: 0
+  field_email_link:
+    weight: 2
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: email_default
+    region: content
+  field_email_text:
+    weight: 1
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
 hidden:
   created: true
