--- a/web/sites/default/config/core.entity_view_display.paragraph.email_button.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.email_button.default.yml
@@ -3,19 +3,28 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.email_button.field_email_button
+    - field.field.paragraph.email_button.field_email_link
+    - field.field.paragraph.email_button.field_email_text
     - paragraphs.paragraphs_type.email_button
 id: paragraph.email_button.default
 targetEntityType: paragraph
 bundle: email_button
 mode: default
 content:
-  field_email_button:
-    weight: 0
+  field_email_link:
+    weight: 2
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: email_mailto
+    region: content
+  field_email_text:
+    weight: 1
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
 hidden:
   scheduled_publication: true
