--- a/web/sites/default/config/field.storage.paragraph.field_email_link.yml
+++ b/web/sites/default/config/field.storage.paragraph.field_email_link.yml
@@ -1,11 +1,11 @@
-uuid: 31fc0284-3d04-47fa-8afa-c759a3cc51bf
+uuid: 9fea3c6d-4c73-4655-b63e-cc9af2028465
 langcode: en
 status: true
 dependencies:
   module:
     - paragraphs
-id: paragraph.field_email_button
-field_name: field_email_button
+id: paragraph.field_email_link
+field_name: field_email_link
 entity_type: paragraph
 type: email
 settings: {  }
