--- a/web/sites/default/config/field.field.paragraph.email_button.field_email_text.yml
+++ b/web/sites/default/config/field.field.paragraph.email_button.field_email_text.yml
@@ -1,19 +1,19 @@
-uuid: 6604c24e-5f52-4e8d-acde-b4d7062bee01
+uuid: 5c6573e1-7459-4e6c-b740-4481f1656d44
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_email_button
+    - field.storage.paragraph.field_email_text
     - paragraphs.paragraphs_type.email_button
-id: paragraph.email_button.field_email_button
-field_name: field_email_button
+id: paragraph.email_button.field_email_text
+field_name: field_email_text
 entity_type: paragraph
 bundle: email_button
-label: 'Email Button'
+label: 'Email Text'
 description: ''
 required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
-field_type: email
+field_type: string
