POWR-43 Added an action button field in preparation for final button.

--- a/web/sites/default/config/core.entity_form_display.paragraph.service_step.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.service_step.default.yml
@@ -3,20 +3,32 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.service_step.field_step_action_button
     - field.field.paragraph.service_step.field_step_instruction
     - field.field.paragraph.service_step.field_step_title
     - paragraphs.paragraphs_type.service_step
   module:
-    - content_moderation
-    - datetime
+    - paragraphs
     - text
 id: paragraph.service_step.default
 targetEntityType: paragraph
 bundle: service_step
 mode: default
 content:
+  field_step_action_button:
+    type: entity_reference_paragraphs
+    weight: 2
+    settings:
+      title: 'Action button'
+      title_plural: 'Action buttons'
+      edit_mode: open
+      add_mode: button
+      form_display_mode: default
+      default_paragraph_type: _none
+    third_party_settings: {  }
+    region: content
   field_step_instruction:
-    weight: 101
+    weight: 1
     settings:
       rows: 5
       placeholder: ''
@@ -24,26 +36,16 @@ content:
     type: text_textarea
     region: content
   field_step_title:
-    weight: 102
+    weight: 0
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
     region: content
-  moderation_state:
-    type: moderation_state_default
-    weight: 100
-    settings: {  }
-    region: content
-    third_party_settings: {  }
-  scheduled_publication:
-    type: datetime_default
-    weight: 20
-    region: content
-    settings: {  }
-    third_party_settings: {  }
 hidden:
   created: true
+  moderation_state: true
+  scheduled_publication: true
   status: true
   uid: true
