--- a/web/sites/default/config/core.entity_view_display.paragraph.service_step.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.service_step.default.yml
@@ -3,25 +3,36 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.service_step.field_step_action_button
     - field.field.paragraph.service_step.field_step_instruction
     - field.field.paragraph.service_step.field_step_title
     - paragraphs.paragraphs_type.service_step
   module:
+    - entity_reference_revisions
     - text
 id: paragraph.service_step.default
 targetEntityType: paragraph
 bundle: service_step
 mode: default
 content:
+  field_step_action_button:
+    type: entity_reference_revisions_entity_view
+    weight: 2
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    region: content
   field_step_instruction:
-    weight: 0
+    weight: 1
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_step_title:
-    weight: 1
+    weight: 0
     label: above
     settings:
       link_to_entity: false
