--- a/web/sites/default/config/paragraphs.paragraphs_type.service_step.yml
+++ b/web/sites/default/config/paragraphs.paragraphs_type.service_step.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: service_step
-label: 'Step by step instructions'
+label: Step
 icon_uuid: null
 description: 'Use this paragraph type to add a step in the process of accessing a City Service.'
 behavior_plugins: {  }
