--- a/web/sites/default/config/field.field.paragraph.service_step.field_step_action_button.yml
+++ b/web/sites/default/config/field.field.paragraph.service_step.field_step_action_button.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.paragraph.field_step_action_button
+    - paragraphs.paragraphs_type.email_button
     - paragraphs.paragraphs_type.form_app_button
     - paragraphs.paragraphs_type.service_step
     - paragraphs.paragraphs_type.telephone_button
@@ -25,11 +26,15 @@ settings:
     negate: 0
     target_bundles:
       form_app_button: form_app_button
+      email_button: email_button
       telephone_button: telephone_button
     target_bundles_drag_drop:
       form_app_button:
         enabled: true
         weight: 5
+      email_button:
+        enabled: true
+        weight: 6
       service_step:
         weight: 6
         enabled: false
