--- a/web/sites/default/config/core.entity_view_display.paragraph.service_step.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.service_step.default.yml
@@ -18,7 +18,7 @@ content:
   field_step_action_button:
     type: entity_reference_revisions_entity_view
     weight: 2
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -26,14 +26,14 @@ content:
     region: content
   field_step_instruction:
     weight: 1
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_step_title:
     weight: 0
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
