POWR-73 Building content type.

--- a/web/sites/default/config/search_api.index.content.yml
+++ b/web/sites/default/config/search_api.index.content.yml
@@ -24,6 +24,7 @@ field_settings:
       view_mode:
         'entity:node':
           city_service: default
+          building: default
   label:
     label: Label
     property_path: aggregated_field
@@ -62,20 +63,6 @@ datasource_settings:
       default: true
       selected: {  }
 processor_settings:
-  rendered_item: {  }
-  add_url: {  }
-  aggregated_field: {  }
-  tokenizer:
-    fields:
-      - rendered
-      - label
-    spaces: ''
-    overlap_cjk: 1
-    minimum_word_size: '3'
-    weights:
-      preprocess_index: -6
-      preprocess_query: -5
-    all_fields: false
   stopwords:
     fields:
       - rendered
@@ -128,6 +115,18 @@ processor_settings:
       preprocess_index: -9
       preprocess_query: -8
     all_fields: false
+  tokenizer:
+    fields:
+      - rendered
+      - label
+    spaces: ''
+    overlap_cjk: 1
+    minimum_word_size: '3'
+    weights:
+      preprocess_index: -6
+      preprocess_query: -5
+    all_fields: false
+  rendered_item: {  }
   transliteration:
     fields:
       - rendered
@@ -136,6 +135,8 @@ processor_settings:
       preprocess_index: -4
       preprocess_query: -3
     all_fields: false
+  add_url: {  }
+  aggregated_field: {  }
   content_access:
     weights:
       preprocess_query: -10
