--- a/web/sites/default/config/user.role.layout_manager.yml
+++ b/web/sites/default/config/user.role.layout_manager.yml
@@ -11,4 +11,5 @@ is_admin: false
 permissions:
   - 'administer node display'
   - 'administer panelizer'
+  - 'administer panelizer node building defaults'
   - 'administer panelizer node city_service defaults'
