--- a/web/sites/default/config/views.view.search.yml
+++ b/web/sites/default/config/views.view.search.yml
@@ -78,6 +78,7 @@ display:
           view_modes:
             'entity:node':
               city_service: default
+              building: default
       fields:
         rendered:
           table: search_api_index_content
