--- a/web/sites/default/config/core.entity_view_display.node.building.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.building.teaser.yml
@@ -4,16 +4,30 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
+    - field.field.node.building.field_address
     - node.type.building
   module:
+    - address
+    - panelizer
     - user
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
 id: node.building.teaser
 targetEntityType: node
 bundle: building
 mode: teaser
 content:
-  links:
-    weight: 100
+  field_address:
+    type: address_default
+    weight: 0
     region: content
+    label: above
+    settings: {  }
+    third_party_settings: {  }
 hidden:
+  links: true
   scheduled_publication: true
