POWR-47 Service location content type

--- a/web/sites/default/config/search_api.index.content.yml
+++ b/web/sites/default/config/search_api.index.content.yml
@@ -25,6 +25,7 @@ field_settings:
         'entity:node':
           city_service: default
           building: default
+          service_location: default
   label:
     label: Label
     property_path: aggregated_field
@@ -63,6 +64,36 @@ datasource_settings:
       default: true
       selected: {  }
 processor_settings:
+  add_url: {  }
+  aggregated_field: {  }
+  content_access:
+    weights:
+      preprocess_query: -10
+  html_filter:
+    fields:
+      - rendered
+      - label
+    title: true
+    alt: true
+    tags:
+      h1: 5
+      h2: 3
+      h3: 2
+      strong: 2
+      b: 2
+    weights:
+      preprocess_index: -10
+      preprocess_query: -9
+    all_fields: false
+  ignorecase:
+    fields:
+      - rendered
+      - label
+    weights:
+      preprocess_index: -9
+      preprocess_query: -8
+    all_fields: false
+  rendered_item: {  }
   stopwords:
     fields:
       - rendered
@@ -107,14 +138,6 @@ processor_settings:
       preprocess_index: -5
       preprocess_query: -4
     all_fields: false
-  ignorecase:
-    fields:
-      - rendered
-      - label
-    weights:
-      preprocess_index: -9
-      preprocess_query: -8
-    all_fields: false
   tokenizer:
     fields:
       - rendered
@@ -126,7 +149,6 @@ processor_settings:
       preprocess_index: -6
       preprocess_query: -5
     all_fields: false
-  rendered_item: {  }
   transliteration:
     fields:
       - rendered
@@ -134,27 +156,6 @@ processor_settings:
     weights:
       preprocess_index: -4
       preprocess_query: -3
-    all_fields: false
-  add_url: {  }
-  aggregated_field: {  }
-  content_access:
-    weights:
-      preprocess_query: -10
-  html_filter:
-    fields:
-      - rendered
-      - label
-    title: true
-    alt: true
-    tags:
-      h1: 5
-      h2: 3
-      h3: 2
-      strong: 2
-      b: 2
-    weights:
-      preprocess_index: -10
-      preprocess_query: -9
     all_fields: false
 tracker_settings:
   default:
