--- a/web/sites/default/config/views.view.search.yml
+++ b/web/sites/default/config/views.view.search.yml
@@ -79,6 +79,7 @@ display:
             'entity:node':
               city_service: default
               building: default
+              service_location: default
       fields:
         rendered:
           table: search_api_index_content
