POWR-42 Fix form display and display.

--- a/web/sites/default/config/field.storage.paragraph.field_step_by_step_instructions.yml
+++ b/web/sites/default/config/field.storage.paragraph.field_step_by_step_instructions.yml
@@ -1,12 +1,12 @@
-uuid: 2e29343d-5958-488e-9ae8-290dcd885189
+uuid: 4ccda41e-11f2-44d1-94b9-85b279289c69
 langcode: en
 status: true
 dependencies:
   module:
     - entity_reference_revisions
     - paragraphs
-id: paragraph.field_step
-field_name: field_step
+id: paragraph.field_step_by_step_instructions
+field_name: field_step_by_step_instructions
 entity_type: paragraph
 type: entity_reference_revisions
 settings:
