--- a/web/sites/default/config/core.entity_form_display.paragraph.service_mode.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.service_mode.default.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.service_mode.field_service_mode_list
-    - field.field.paragraph.service_mode.field_step
+    - field.field.paragraph.service_mode.field_step_by_step_instructions
     - field.field.paragraph.service_mode.field_time_to_complete
     - paragraphs.paragraphs_type.service_mode
   module:
@@ -20,9 +20,9 @@ content:
     third_party_settings: {  }
     type: options_select
     region: content
-  field_step:
+  field_step_by_step_instructions:
     type: entity_reference_paragraphs
-    weight: 2
+    weight: 3
     settings:
       title: Paragraph
       title_plural: Paragraphs
