--- a/web/sites/default/config/core.entity_view_display.paragraph.service_mode.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.service_mode.default.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.service_mode.field_service_mode_list
-    - field.field.paragraph.service_mode.field_step
+    - field.field.paragraph.service_mode.field_step_by_step_instructions
     - field.field.paragraph.service_mode.field_time_to_complete
     - paragraphs.paragraphs_type.service_mode
   module:
@@ -17,15 +17,15 @@ mode: default
 content:
   field_service_mode_list:
     weight: 0
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
-  field_step:
+  field_step_by_step_instructions:
     type: entity_reference_revisions_entity_view
-    weight: 2
-    label: above
+    weight: 3
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -33,7 +33,7 @@ content:
     region: content
   field_time_to_complete:
     weight: 1
-    label: above
+    label: visually_hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
