--- a/web/sites/default/config/field.field.paragraph.service_mode.field_step_by_step_instructions.yml
+++ b/web/sites/default/config/field.field.paragraph.service_mode.field_step_by_step_instructions.yml
@@ -1,18 +1,18 @@
-uuid: 465afb0a-e7e8-421f-af45-79d175b6c9f8
+uuid: d44c6fca-ca06-45c5-b956-f13c830ec7f5
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_step
+    - field.storage.paragraph.field_step_by_step_instructions
     - paragraphs.paragraphs_type.service_mode
     - paragraphs.paragraphs_type.service_step
   module:
     - entity_reference_revisions
-id: paragraph.service_mode.field_step
-field_name: field_step
+id: paragraph.service_mode.field_step_by_step_instructions
+field_name: field_step_by_step_instructions
 entity_type: paragraph
 bundle: service_mode
-label: Step
+label: 'Step by step instructions'
 description: 'Add up to 7 steps to access this service through a service mode.'
 required: false
 translatable: false
