POWR-47 Change label to sentence case.

--- a/web/sites/default/config/core.entity_view_display.node.service_location.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.service_location.teaser.yml
@@ -16,4 +16,8 @@ content:
     weight: 100
     region: content
 hidden:
+  field_building: true
+  field_floor: true
+  field_get_directions: true
+  field_open_hours: true
   scheduled_publication: true
