--- a/web/sites/default/config/field.field.node.service_location.field_get_directions.yml
+++ b/web/sites/default/config/field.field.node.service_location.field_get_directions.yml
@@ -11,7 +11,7 @@ id: node.service_location.field_get_directions
 field_name: field_get_directions
 entity_type: node
 bundle: service_location
-label: 'Get Directions'
+label: 'Get directions'
 description: 'A web link that the user can click to get directions to this location.'
 required: true
 translatable: false
