--- a/web/sites/default/config/field.field.node.service_location.field_open_hours.yml
+++ b/web/sites/default/config/field.field.node.service_location.field_open_hours.yml
@@ -9,7 +9,7 @@ id: node.service_location.field_open_hours
 field_name: field_open_hours
 entity_type: node
 bundle: service_location
-label: 'Open Hours'
+label: 'Open hours'
 description: ''
 required: true
 translatable: false
