--- a/web/sites/default/config/node.type.service_location.yml
+++ b/web/sites/default/config/node.type.service_location.yml
@@ -8,7 +8,7 @@ third_party_settings:
   menu_ui:
     available_menus: {  }
     parent: ''
-name: 'Service Location'
+name: 'Service location'
 type: service_location
 description: 'The service location where the community can visit to obtain the service.'
 help: ''
