POWR-42 Updated Form display for Step to step instructions that was not saved in the last commit.

--- a/web/sites/default/config/core.entity_form_display.paragraph.service_mode.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.service_mode.default.yml
@@ -26,10 +26,10 @@ content:
     settings:
       title: Paragraph
       title_plural: Paragraphs
-      edit_mode: open
-      add_mode: dropdown
+      edit_mode: preview
+      add_mode: button
       form_display_mode: default
-      default_paragraph_type: ''
+      default_paragraph_type: service_step
     third_party_settings: {  }
     region: content
   field_time_to_complete:
