Clean up the service mode form and view displays following merge conflict on POWR-42

--- a/web/sites/default/config/core.entity_form_display.paragraph.service_mode.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.service_mode.default.yml
@@ -42,6 +42,7 @@ content:
     region: content
 hidden:
   created: true
+  field_step: true
   moderation_state: true
   scheduled_publication: true
   status: true
