--- a/web/sites/default/config/core.entity_view_display.paragraph.service_mode.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.service_mode.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.service_mode.field_service_mode_list
+    - field.field.paragraph.service_mode.field_step
     - field.field.paragraph.service_mode.field_step_by_step_instructions
     - field.field.paragraph.service_mode.field_time_to_complete
     - paragraphs.paragraphs_type.service_mode
@@ -40,4 +41,5 @@ content:
     type: string
     region: content
 hidden:
+  field_step: true
   scheduled_publication: true
