POWR-41 Update Service Content Type to include Service Mode field

--- a/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
@@ -4,11 +4,13 @@ status: true
 dependencies:
   config:
     - field.field.node.city_service.field_community_actions
+    - field.field.node.city_service.field_service_mode
     - field.field.node.city_service.field_topics
     - node.type.city_service
   module:
     - content_moderation
     - datetime
+    - paragraphs
     - path
 id: node.city_service.default
 targetEntityType: node
@@ -26,6 +28,18 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: options_buttons
+    region: content
+  field_service_mode:
+    type: entity_reference_paragraphs
+    weight: 26
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: preview
+      add_mode: button
+      form_display_mode: default
+      default_paragraph_type: service_mode
+    third_party_settings: {  }
     region: content
   field_topics:
     weight: 2
