POWR-41 Title and help text update for Service Mode paragraph type

--- a/web/sites/default/config/field.field.node.city_service.field_service_mode.yml
+++ b/web/sites/default/config/field.field.node.city_service.field_service_mode.yml
@@ -12,8 +12,8 @@ id: node.city_service.field_service_mode
 field_name: field_service_mode
 entity_type: node
 bundle: city_service
-label: 'Service mode'
-description: 'How the community can access this service.'
+label: 'How can community members access this service'
+description: 'First add a service mode, then add steps.'
 required: false
 translatable: false
 default_value: {  }
