Small changes to make it easier to demo group content creation.

--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -10,6 +10,6 @@ weight: 1
 is_admin: false
 permissions:
   - 'access content'
-  - 'access shortcuts'
   - 'access site-wide contact form'
+  - 'access toolbar'
   - 'view media'
