--- a/web/sites/default/config/group.role.bureau_office-anonymous.yml
+++ b/web/sites/default/config/group.role.bureau_office-anonymous.yml
@@ -12,5 +12,4 @@ audience: anonymous
 group_type: bureau_office
 permissions_ui: true
 permissions:
-  - 'view group_node:city_service entity'
-  - 'view group'
+  1: 'view group'
