--- a/composer.json
+++ b/composer.json
@@ -39,9 +39,10 @@
         "drupal/console": "^1.0.2",
         "drupal/core": "~8.5",
         "drupal/ds": "^3.1",
+        "drupal/eva": "^1.3",
         "drupal/facets": "1.x-dev",
         "drupal/field_group": "^1.0",
-        "drupal/group": "^1.0@RC",
+        "drupal/group": "^1.0",
         "drupal/lightning_media": "~2.1",
         "drupal/page_manager": "^4.0@beta",
         "drupal/paragraphs": "^1.1",
