Tweaks to related services block, added block to layout

--- a/web/sites/default/config/views.view.services_related_taxonomy.yml
+++ b/web/sites/default/config/views.view.services_related_taxonomy.yml
@@ -3,7 +3,6 @@ langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
     - node.type.city_service
   module:
     - node
@@ -57,10 +56,12 @@ display:
       style:
         type: default
       row:
-        type: 'entity:node'
+        type: fields
         options:
-          relationship: none
-          view_mode: teaser
+          default_field_elements: true
+          inline: {  }
+          separator: ''
+          hide_empty: false
       fields:
         title:
           id: title
@@ -161,7 +162,7 @@ display:
           exposed: false
           expose:
             label: ''
-      title: 'Services Related by Taxonomy'
+      title: 'Related Services'
       header: {  }
       footer: {  }
       empty: {  }
@@ -228,6 +229,8 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
+      block_description: 'Services Related by Taxonomy'
+      block_category: Content
     cache_metadata:
       max-age: -1
       contexts:
