POWR-48 Service location teaser for in person service mode

--- a/web/sites/default/config/core.entity_form_display.paragraph.service_step.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.service_step.default.yml
@@ -19,8 +19,8 @@ content:
     type: entity_reference_paragraphs
     weight: 2
     settings:
-      title: 'Action button'
-      title_plural: 'Action buttons'
+      title: Action
+      title_plural: Actions
       edit_mode: open
       add_mode: button
       form_display_mode: default
