--- a/web/sites/default/config/field.field.paragraph.service_step.field_step_action_button.yml
+++ b/web/sites/default/config/field.field.paragraph.service_step.field_step_action_button.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.paragraph.field_step_action_button
     - paragraphs.paragraphs_type.email_button
     - paragraphs.paragraphs_type.form_app_button
+    - paragraphs.paragraphs_type.location
     - paragraphs.paragraphs_type.service_step
     - paragraphs.paragraphs_type.telephone_button
   module:
@@ -14,7 +15,7 @@ id: paragraph.service_step.field_step_action_button
 field_name: field_step_action_button
 entity_type: paragraph
 bundle: service_step
-label: 'Action button'
+label: Action
 description: ''
 required: false
 translatable: false
@@ -28,6 +29,7 @@ settings:
       form_app_button: form_app_button
       email_button: email_button
       telephone_button: telephone_button
+      location: location
     target_bundles_drag_drop:
       form_app_button:
         enabled: true
@@ -44,4 +46,10 @@ settings:
       telephone_button:
         enabled: true
         weight: 8
+      location:
+        enabled: true
+        weight: 10
+      service_mode:
+        weight: 11
+        enabled: false
 field_type: entity_reference_revisions
