POWR-63 Added Programs field to Bureau/Office

--- a/web/sites/default/config/core.entity_form_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.program.default.yml
@@ -1,26 +1,16 @@
-uuid: b977268c-fb31-471a-8aba-2ab654f41b7a
+uuid: 2b67c1e4-b0f5-4e7c-be7b-262f2758226c
 langcode: en
 status: true
 dependencies:
   config:
-    - field.field.group.bureau_office.field_programs
-    - group.type.bureau_office
+    - group.type.program
   module:
     - path
-id: group.bureau_office.default
+id: group.program.default
 targetEntityType: group
-bundle: bureau_office
+bundle: program
 mode: default
 content:
-  field_programs:
-    weight: 31
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_autocomplete
-    region: content
   label:
     type: string_textfield
     weight: -5
