--- a/web/sites/default/config/block.block.groupoperations.yml
+++ b/web/sites/default/config/block.block.groupoperations.yml
@@ -26,6 +26,7 @@ visibility:
     id: 'entity_bundle:group'
     bundles:
       bureau_office: bureau_office
+      program: program
     negate: false
     context_mapping:
       group: '@group.group_route_context:group'
@@ -33,6 +34,7 @@ visibility:
     id: group_type
     group_types:
       bureau_office: bureau_office
+      program: program
     negate: false
     context_mapping:
       group: '@group.group_route_context:group'
